* added border to preview img & gap in popup form * word wrap on name column * readjusted default column size * w2ui & enlarged img now responsive * fixed enlarged img position * fixed w2ui resize + zoom bug * refactored some elements to kebab-case * refactored jsdoc in utils.js * must fix body size (100vh)

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -110,6 +110,7 @@ body{
     padding: 0;
     font-family: var(--font-type);
     background-color: var(--clr-bg);
+    height: 100vh;
 }
 
 header {
@@ -582,4 +583,25 @@ textarea.error,
 
 .hide {
     display: none !important;
+}
+
+/* TO BE REMOVED -note:
+ itemGrid must be kebab-case
+ refactor/relocate code to a group */
+
+#main-body{
+    height: 80%;
+}
+
+#itemGrid {
+    height: 100%;
+}
+
+#image-preview {
+    width: 200px;
+    height: 200px;   
+    object-fit: cover;
+    object-position: 50% 50%;
+    border-radius: 5px;
+    border: 1px solid var(--clr-box-shadow-primary);
 }
